--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,13 @@ repositories {
 
 def slf4jVersion = "1.7.32"
 
-/* dependencies {
+dependencies {
     testImplementation(
             "io.rest-assured:rest-assured:5.3.0",
             "org.junit.jupiter:junit-jupiter:5.9.0",
             "org.slf4j:slf4j-simple:$slf4jVersion"
     )
-} */
+}
 
 tasks.withType(Test) {
     systemProperties(System.getProperties())
