--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ repositories {
     mavenCentral()
 }
 
+def allureVersion = "2.19.0",
+    assertJVersion = "3.23.1",
+    slf4jVersion = "1.7.32"
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -19,6 +23,8 @@ dependencies {
     testImplementation(
             //client
             "io.rest-assured:rest-assured:5.3.0",
+            //assert
+            "org.assertj:assertj-core:$assertJVersion",
             //config
             "org.aeonbits.owner:owner:1.0.12",
             //json
