--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,8 @@ allure {
     }
 }
 
-/*sourceCompatibility = 1.8
-targetCompatibility = 1.8*/
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
     testImplementation(
