--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,6 @@ plugins {
     id "io.freefair.lombok" version "6.0.0-m2"
 }
 
-
-
 group 'guru.qa'
 version '1.0-SNAPSHOT'
 
@@ -54,6 +52,7 @@ dependencies {
     )
 }
 
+
 compileTestJava {
     options.encoding = 'UTF-8'
 }
@@ -61,6 +60,18 @@ compileTestJava {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
 
 /*
 plugins {
