added tasks to build.gradle and tags

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,12 @@ tasks.withType(Test) {
     }
 }
 
+task lesson20_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags("lesson20")
+    }
+}
+
 
 /*
 plugins {
