--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,7 @@ tasks.withType(Test) {
     }
 }
 
-task lesson20_tests(type: Test) {
+task reqres_tests(type: Test) {
     useJUnitPlatform {
         includeTags("lesson20")
     }
