--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ tasks.withType(Test) {
 
 task reqres_tests(type: Test) {
     useJUnitPlatform {
-        includeTags("lesson20")
+        includeTags("reqres")
     }
 }
 
